--- a/page2/css/estilos.css
+++ b/page2/css/estilos.css
@@ -64,6 +64,11 @@ body {
 #informacion {
   height: auto;
   max-width: 100%;
+  /*NUEVO*/
+  margin-top: 50px;
+  max-width: 800px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .hidden {
@@ -102,7 +107,14 @@ body {
     max-width: 100%;
     margin: auto;
     margin-top: 50px;
+    /*nuevo*/
+    display: flex;
+    justify-content: center;
     /* scale: calc(1.1); */
+  }
+  /*NUEVO*/
+  .title-curse {
+    font-size: 20px !important;
   }
 }
 @media (max-width: 1200px) {
@@ -751,9 +763,9 @@ footer .social {
   #espacio2.esd-stripe {
     width: 500px !important;
   }
-  #informacion {
+  /* #informacion {
     width: 500px;
-  }
+  } */
   .img-title {
     /* margin: auto; */
     width: 280px;
@@ -769,7 +781,14 @@ footer .social {
   }
 
   #informacion {
-    margin-top: 0px;
+    /*  margin-top: 0px; */
+    /* NUEVO */
+    margin-top: 50px;
+    /* margin-left: 30px; */
+  }
+  .info2 {
+    /*nuevo*/
+    margin-top: 0px !important;
   }
   .espacio10 {
     margin-bottom: 20px;
@@ -777,6 +796,9 @@ footer .social {
   .img-title {
     /* margin: auto; */
     max-width: 280px;
+  }
+  .title-curse {
+    font-size: 15px !important;
   }
   /*  #informacion {
     margin: auto;
@@ -791,4 +813,60 @@ footer .social {
   #espacio2 {
     max-width: 1000px !important;
   }
+}
+/*-----------------------------*/
+.contenedor {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  max-width: 280px;
+  width: 100%;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  position: relative;
+  border: none;
+  box-shadow: 4px 5px 6px 0px rgba(105, 105, 105, 0.2);
+  margin-bottom: 50px;
+}
+
+.box > h4 {
+  font-size: 1.1rem !important;
+  color: #333;
+  font-family: "NeoSansStd-Medium";
+}
+
+.box .circulo-img {
+  position: absolute;
+  top: -20%;
+  left: -8%;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  /* margin: 10px; */
+  background-color: RED;
+  display: flex;
+  align-content: center;
+}
+.circulo-img > img {
+  max-width: 65%;
+  max-height: 65%;
+  margin: auto;
+}
+
+.box h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+/*TITLE*/
+.title-curse {
+  font-size: 25px;
+  font-family: NeoSansStd-Medium;
+  background-color: greenyellow;
+  padding-left: 15px;
+  padding-right: 15px;
 }
