--- a/page2/css/estilos.css
+++ b/page2/css/estilos.css
@@ -802,6 +802,7 @@ footer .social {
     max-width: 280px;
   }
   .title-curse {
+    /*nuevo*/
     font-size: 15px !important;
   }
   /*  #informacion {
