--- a/page6/css/estilos.css
+++ b/page6/css/estilos.css
@@ -63,6 +63,11 @@ body {
 #informacion {
   height: auto;
   max-width: 100%;
+  /*NUEVO*/
+  margin-top: 50px;
+  max-width: 800px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 @media (max-width: 768px) {
@@ -101,6 +106,12 @@ body {
     margin: auto;
     margin-top: 50px;
     /* scale: calc(1.1); */
+    /*nuevo*/
+    display: flex;
+    justify-content: center;
+  }
+  .title-curse {
+    font-size: 20px !important;
   }
 }
 @media (max-width: 1200px) {
@@ -737,9 +748,9 @@ footer .social {
   #espacio2.esd-stripe {
     width: 500px !important;
   }
-  #informacion {
+  /* #informacion {
     width: 100%;
-  }
+  } */
   .img-title {
     width: 280px;
   }
@@ -750,17 +761,29 @@ footer .social {
     justify-content: center;
   }
   #espacio1 {
-    max-width: 388px !important;
+    /* max-width: 388px !important; */
+    max-width: 100% !important;
   }
-
+  .info-cuadro {
+    /*NUEVO*/
+    margin-left: 10px !important;
+  }
+  .info2 {
+    /*nuevo*/
+    margin-top: 0px !important;
+  }
   #informacion {
-    margin-top: 0px;
+    margin-top: 50px;
   }
   .espacio10 {
     margin-bottom: 20px;
   }
   .img-title {
     max-width: 280px;
+  }
+  .title-curse {
+    /*nuevo*/
+    font-size: 15px !important;
   }
 }
 @media (min-width: 1280px) {
@@ -772,4 +795,63 @@ footer .social {
   #espacio2 {
     max-width: 1000px !important;
   }
+}
+/*-----------------------------*/
+.contenedor {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  max-width: 280px;
+  width: 100%;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  position: relative;
+  border: none;
+  box-shadow: 4px 5px 6px 0px rgba(105, 105, 105, 0.2);
+  margin-bottom: 50px;
+}
+
+.box > h4 {
+  font-size: 1.1rem !important;
+  color: #333;
+  font-family: "NeoSansStd-Medium";
+}
+
+.box .circulo-img {
+  position: absolute;
+  top: -20%;
+  left: -8%;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  /* margin: 10px; */
+  background-color: RED;
+  display: flex;
+  align-content: center;
+}
+.circulo-img > img {
+  max-width: 65%;
+  max-height: 65%;
+  margin: auto;
+}
+
+.box h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+/*TITLE*/
+.title-curse {
+  font-size: 25px;
+  font-family: NeoSansStd-Medium;
+  background-color: greenyellow;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.info2 {
+  margin-top: 0px !important;
 }
