--- a/page6/css/estilos.css
+++ b/page6/css/estilos.css
@@ -19,7 +19,10 @@
   font-family: "NeoSansStd-Medium";
   src: url("../fuentes/NeoSansStd-Medium.otf");
 }
-
+@font-face {
+  font-family: "LibelSuitRg";
+  src: url("../fuentes/libel-suit-rg.ttf");
+}
 body {
   max-width: 1280px;
   text-align: center;
@@ -783,7 +786,7 @@ footer .social {
   }
   .title-curse {
     /*nuevo*/
-    font-size: 15px !important;
+    font-size: 20px !important;
   }
 }
 @media (min-width: 1280px) {
@@ -830,13 +833,13 @@ footer .social {
   height: 45px;
   border-radius: 50%;
   /* margin: 10px; */
-  background-color: RED;
+  background-color: #e3e2e8;
   display: flex;
   align-content: center;
 }
 .circulo-img > img {
-  max-width: 65%;
-  max-height: 65%;
+  max-width: 85%;
+  max-height: 85%;
   margin: auto;
 }
 
@@ -846,9 +849,12 @@ footer .social {
 }
 /*TITLE*/
 .title-curse {
-  font-size: 25px;
-  font-family: NeoSansStd-Medium;
-  background-color: greenyellow;
+  font-size: 30px;
+  /* font-family: NeoSansStd-Medium; */
+  /*  background-color: greenyellow; */
+  font-family: LibelSuitRg;
+  background-color: #ffd503;
+  color: #7e31f7 !important;
   padding-left: 15px;
   padding-right: 15px;
 }
