page2 - frec-niv

--- a/page2/css/estilos.css
+++ b/page2/css/estilos.css
@@ -728,7 +728,8 @@ footer .social {
   width: 400px;
 }
 #espacio2 {
-  width: 800px !important;
+  /* width: 800px !important; */
+  width: 800px;
   background-color: #fff;
 }
 
@@ -816,7 +817,7 @@ footer .social {
 @media (min-width: 1280px) {
   #espacio1 {
     width: 100%;
-    max-width: 800px !important;
+    max-width: 800px;
     background-color: #fff;
   }
   #espacio2 {
@@ -975,8 +976,11 @@ div#frecuencias {
   color: #162b46;
 }
 @media (max-width: 768px) {
+  #espacio2 {
+    max-width: -webkit-fill-available;
+  }
   #frecuencias > .row {
-    max-width: 320px;
+    max-width: 350px;
     font-size: 12px;
     height: 22px;
   }
@@ -997,25 +1001,5 @@ div#frecuencias {
   }
   .cronologia-pie {
     font-size: 14px;
-  }
-}
-@media (min-width: 1000px) {
-  #espacio2 {
-    width: 700px;
-  }
-}
-@media (max-width: 500px) {
-  #espacio2 {
-    width: 300px;
-  }
-}
-@media (max-width: 768px) {
-  #espacio2 {
-    width: 500px;
-  }
-}
-@media (max-width: 500px) {
-  #espacio2 {
-    width: 300px;
   }
 }
