--- a/page3/css/estilos.css
+++ b/page3/css/estilos.css
@@ -729,6 +729,8 @@ footer .social {
 #espacio2 {
   /* width: 800px !important; */
   background-color: #fff;
+  width: 100% !important;
+  max-width: 800px;
 }
 
 @media (max-width: 780px) {
@@ -779,6 +781,9 @@ footer .social {
   }
   #espacio1 {
     max-width: 388px !important;
+  }
+  #espacio2 {
+    max-width: 360px !important;
   }
   #informacion {
     /*  margin-top: 0px; */
