--- a/page5/css/estilos.css
+++ b/page5/css/estilos.css
@@ -730,6 +730,8 @@ footer .social {
 #espacio2 {
   /* width: 800px !important; */
   background-color: #fff;
+  width: 100% !important;
+  max-width: 800px;
 }
 
 @media (max-width: 780px) {
@@ -780,7 +782,7 @@ footer .social {
     justify-content: center;
   }
   #espacio1 {
-    max-width: 360px !important;
+    max-width: 350px !important;
   }
 
   #informacion {
